--- a/view/adminhtml/layout/composer_packages_index_index.xml
+++ b/view/adminhtml/layout/composer_packages_index_index.xml
@@ -3,6 +3,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <update handle="styles"/>
     <body>
-
+        <referenceContainer name="content">
+            <uiComponent name="xtea_fields_listing"/>
+            <!--<block class="Eadesigndev\ComposerRepo\Block\Adminhtml\AddButton" name="template_list"/>-->
+        </referenceContainer>
     </body>
 </page>
