#2172: Added fixed mutiple areas, repo works

--- a/view/frontend/templates/auth.phtml
+++ b/view/frontend/templates/auth.phtml
@@ -1,21 +1,17 @@
-<html>
-<body>
+<?php
+/** @var Eadesigndev\ComposerRepo\Block\Account\Auth $block */
+?>
 <table>
     <tr>
         <th class="description">Description</th>
         <th class="auth-key">Username</th>
         <th class="auth-secretkey">Password</th>
     </tr>
-    <?php
-    /** @var Eadesigndev\ComposerRepo\Block\Account\Auth $block */
-    foreach ($block->customerKey() as $item) {
-        echo '<tr>
-                    <td>' . $item->getData('description') . '</td>
-                    <td>' . $item->getData('auth_key') . '</td>
-                    <td>' . $item->getData('auth_secret') . '</td>
-                  </tr>';
-    }
-    ?>
+    <?php foreach ($block->customerKey() as $item) : ?>
+        <tr>
+            <td><?php echo $item->getData('description') ?></td>
+            <td><?php echo $item->getData('auth_key') ?></td>
+            <td><?php echo $item->getData('auth_secret') ?></td>
+        </tr>
+    <?php endforeach; ?>
 </table>
-</body>
-</html>
