--- a/view/frontend/templates/packages.phtml
+++ b/view/frontend/templates/packages.phtml
@@ -6,17 +6,17 @@ $packages = $block->customerPackages();
 <table>
     <tr>
         <th class="description">Order ID</th>
-        <th class="auth-key">Description</th>
-        <th class="auth-secretkey">Package Name</th>
-        <th class="auth-secretkey">Last Avaible Version</th>
+        <th class="package-id">Package Id</th>
+        <th class="package-name">Package Name</th>
+        <th class="version">Last Avaible Version</th>
     </tr>
     <?php foreach ($packages as $item) :?>
         <tr>
             <?php $package = $item->getData(\Eadesigndev\ComposerRepo\Block\Account\Packages::PACKAGE) ?>
-            <td><?php echo $item->getData('order_id') ?> </td>
-            <td><?php echo $package->getData('name') ?></td>
-            <td><?php echo $package->getData('description') ?></td>
-            <td><?php echo $package->getData('version') ?></td>
+            <td><?php echo   $item->getData('order_id') ?> </td>
+            <td><?php echo   $item->getData('package_id') ?></td>
+            <td><?php echo   $item->getData('description') ?></td>
+            <td><?php echo   $item->getData('last_allowed_version') ?></td>
         </tr>
     <?php endforeach; ?>
 </table>
