--- a/view/frontend/layout/customer_account.xml
+++ b/view/frontend/layout/customer_account.xml
@@ -3,14 +3,14 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="customer_account_navigation">
-            <block class="Magento\Framework\View\Element\Html\Link\Current" name="customer-account-navigation-packages-ticket-link" after="-">
+            <block class="Magento\Framework\View\Element\Html\Link\Current" name="customer-account-navigation-packages-ticket-link" after="-" cacheable="false">
                 <arguments>
                     <argument name="path" xsi:type="string">eadesign_composerrepo/index/packages</argument>
                     <argument name="label" xsi:type="string">Composer Packages</argument>
                     <argument name="sortOrder" xsi:type="number">1900</argument>
                 </arguments>
             </block>
-            <block class="Magento\Framework\View\Element\Html\Link\Current" name="customer-account-navigation-auth-ticket-link" after="-">
+            <block class="Magento\Framework\View\Element\Html\Link\Current" name="customer-account-navigation-auth-ticket-link" after="-" cacheable="false">
                 <arguments>
                     <argument name="path" xsi:type="string">eadesign_composerrepo/index/auth</argument>
                     <argument name="label" xsi:type="string"> Composer Auth Keys</argument>
