--- a/view/frontend/templates/packages.phtml
+++ b/view/frontend/templates/packages.phtml
@@ -29,7 +29,7 @@ $packages = $block->customerPackages();
             <pre><code>composer config repositories.eadesignro composer <?php echo $block->repoUrl()?></code></pre>
             <br>
             Next install the package with the command:<br><br>
-            <pre><code>composer require <?php echo   $package->getData('name') ?> <?php echo $item->getData('last_allowed_version') ?></code></pre><br>
+            <pre><code>composer require [package_name]</code></pre><br>
             When prompted, enter your <a href="https://www.eadesign.ro/composer/customer/">Authentication details</a>.
         </div>
     </div>
